syntax = "proto3";

package com.coutuapi.cost.grpc;

option java_multiple_files = true;
option java_package = "com.coutuapi.cost.grpc";
option java_outer_classname = "RawMaterialProto";

service RawMaterialService {
  rpc SaveRawMaterial (RawMaterialRequest) returns (SaveRawMaterialResponse);
  rpc GetRawMaterial (GetRawMaterialRequest) returns (GetRawMaterialResponse);
  rpc GetAllRawMaterials (GetAllRawMaterialsRequest) returns (GetAllRawMaterialsResponse);
  rpc EditRawMaterial (EditRawMaterialRequest) returns (EditRawMaterialResponse);
  rpc DeleteRawMaterial (DeleteRawMaterialRequest) returns (DeleteRawMaterialResponse);
}

message GetAllRawMaterialsRequest {
  // Working around the Empty
}

message DeleteRawMaterialRequest {
  string coutuId = 1;
}

message DeleteRawMaterialResponse {
  string status = 1;
  string message = 2;
}

message EditRawMaterialRequest {
  string id = 1;
  string description = 2;
  string coutuId = 3;
  double cost = 4;
  double yield = 5;}

message EditRawMaterialResponse {
  string id = 1;
  string description = 2;
  string coutuId = 3;
  double cost = 4;
  double yield = 5;
}

message RawMaterialRequest {
  string id = 1;
  string description = 2;
  string coutuId = 3;
  double cost = 4;
  double yield = 5;
}

message SaveRawMaterialResponse {
  string status = 1;
  string message = 2;
}

message GetRawMaterialRequest {
  string coutuId = 1;
}

message GetRawMaterialResponse {
  string id = 1;
  string description = 2;
  string coutuId = 3;
  double cost = 4;
  double yield = 5;
}

message GetAllRawMaterialsResponse {
  repeated GetRawMaterialResponse rawMaterials = 1;
}
